; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_20880.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_20880.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_DWORD = common dso_local global i32 0, align 4
@HKEY_CLASSES_ROOT = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@MAGICESPINLSA = common dso_local global i32 0, align 4
@PIPE_ACCESS_DUPLEX = common dso_local global i32 0, align 4
@PIPE_TYPE_MESSAGE = common dso_local global i32 0, align 4
@PIPE_WAIT = common dso_local global i32 0, align 4
@lsadied = common dso_local global i32 0, align 4
@lsasspid = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@szPipe = common dso_local global i8* null, align 8
@threaddeb = common dso_local global i32 0, align 4
@threadlock = common dso_local global i32 0, align 4
@threadwriter = common dso_local global i32 0, align 4
@waitlsadie = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [256 x i8], align 16
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %13 = load i32, i32* @REG_DWORD, align 4
  store i32 %13, i32* %6, align 4
  store i32 4, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %14 = call i32 @exit(i32 0) #2
  unreachable
}

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
